--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,8 @@ div{
 /* regole header */
 
     /* regole menu navigazione */
-    
+
+    /* parte di sfondo */
     .header-nav{
         display: flex;
         justify-content: center;
@@ -23,6 +24,7 @@ div{
         height: 50px;
     }
 
+    /* container del logo - link - login */
     .nav-dimension{
         width: 70%;
         display: flex;
@@ -57,8 +59,22 @@ div{
     }
 
     /* regole descrizione */
+
+    /* parte di sfondo */
     .header-description{
+        display: flex;
+        justify-content: center;
+        align-items: center;
         /* DEBUG */
         background-color: blue;
         height: 350px;
+    }
+    
+    /* parte di posizione del testo */
+    .header-description div{
+        width: 50%;
+        height: 80%;
+
+        /* DEBUG */
+        background-color: plum;
     }
