--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,21 @@
     box-sizing: border-box;
 }
 
+.container-dimension{
+    width: 70%;
+}
+
+.container-flex{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* DEBUG */
 div{
     border: 1px dotted black;
 }
+
 
 
 /* regole header */
@@ -16,20 +28,14 @@ div{
 
     /* parte di sfondo */
     .header-nav{
-        display: flex;
-        justify-content: center;
-        align-items: center;
         /* DEBUG */
         background-color: aquamarine;
         height: 50px;
     }
 
     /* container del logo - link - login */
-    .nav-dimension{
-        width: 70%;
-        display: flex;
+    .nav-disposition{
         justify-content: space-between;
-        align-items: center;
     }
 
     /* dimensioni per logo e login */
@@ -48,9 +54,7 @@ div{
 
     /* impostazione dei link */
     header nav ul{
-        display: flex;
         list-style-type: none;
-        justify-content: center;
         gap:10px;
     }
 
@@ -62,9 +66,6 @@ div{
 
     /* parte di sfondo */
     .header-description{
-        display: flex;
-        justify-content: center;
-        align-items: center;
         /* DEBUG */
         background-color: blue;
         height: 350px;
@@ -77,4 +78,18 @@ div{
 
         /* DEBUG */
         background-color: plum;
+    }
+
+/* regole main */
+
+    /* regole file dispari */
+    .odd{
+        height: 450px;
+
+        /* DEBUG */
+        background-color: beige;
+    }
+
+    .imagine{
+        width: 70%;
     }
