--- a/css/style.css
+++ b/css/style.css
@@ -159,22 +159,51 @@ div{
 
 /* regole footer */
 
-footer{
+footer.container-flex{
     background-color: #23272a;
     height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
 }
 
+footer div{
+    margin: 40px 0;
+    background-color: white;
+}
+
+
+/*
 footer>div{
     width: 70%;
     margin: 0 auto;
+
 
     height: 20px;
     background-color: white;
     
 }
 
+.link-utili{
+    height: 80%;
+    margin-bottom: 40px;
+    justify-content: start;
+}
+
 .social{
-    width: calc(100% / 3);
+    width: calc((100% / 6)*2);
+    height: 100%;
+
+
+    background-color: rosybrown;
+}
+
+.info-generali{
+    width: calc(100% / 6);
+    height: 100%;
+
+
+    background-color: aquamarine;
 }
 
 .end-footer{
@@ -183,4 +212,4 @@ footer>div{
 
 .registration{
     text-align: end;
-}
+} */
