--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,9 @@ footer{
     width: 70%;
     margin: 0 auto;
     padding-top: 40px;
+    
+    /* debug */
+    background-color: white;
 }
 
 .container-flex-footer{
@@ -187,4 +190,24 @@ footer{
 
     /* DEBUG */
     background-color: rgb(65, 165, 165);
+}
+
+.link-finali{
+    width: 70%;
+    margin: 0 auto;
+    border-top: 1px solid blue;
+    padding-top: 10px;
+    margin-top: 20px;
+}
+
+.link-finali div{
+    width: 50%;
+    /* DEBUG */
+    background-color: aquamarine;
+}
+
+.registrati{
+    text-align: end;
+    /* DEBUG */
+    background-color: aquamarine;
 }
